見た目を整えた

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     ようこそ。
     <p>
-      Twitter: 闇野雲(<a href="https://twitter.com/ProfUnkn0wn">@ProfUnkn0wn</a>)
+      Twitter: 闇野雲(<a href="https://twitter.com/ProfUnkn0wn">@ProfUnkn0wn</a>)<br>
       Github: 闇野雲(<a href="https://github.com/ProfUnkn0wn">@ProfUnkn0wn</a>)
     </p>
   </body>
