CSS、ファビコンを追加

--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,user-scalable=no">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="shortcut icon" href="img/favicon.jpg">
     <title>闇野雲</title>
   </head>
   <body>
-    ようこそ。
-    <p>
-      Twitter: 闇野雲(<a href="https://twitter.com/ProfUnkn0wn">@ProfUnkn0wn</a>)<br>
-      Github: 闇野雲(<a href="https://github.com/ProfUnkn0wn">@ProfUnkn0wn</a>)
-    </p>
+    <div class="container">
+      <img src="img/favicon.jpg">
+      <p>
+        ようこそ。
+      </p>
+      <p>
+        <table>
+          <tr>
+            <td>Twitter</td>
+            <td>闇野雲(<a href="https://twitter.com/ProfUnkn0wn">@ProfUnkn0wn</a>)</td>
+          </tr>
+          <tr>
+            <td>Github</td>
+            <td>闇野雲(<a href="https://github.com/ProfUnkn0wn">@ProfUnkn0wn</a>)</td>
+          </tr>
+        </table>
+      </p>
+    </div>
   </body>
 </html>
